tests/expectations/parser/functions/public_const_param_fail.out
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'const'
    --> test:3:31
     |
   3 |     function x(x: u32, public const y: i32) {
     |                               ^^^^^